Implémentation du bouton "Supprimer" (bases)